<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_home"
            android:title="@string/home_nav"
            android:icon="@drawable/ic_home"/>
        <item android:id="@+id/nav_favorite"
            android:title="@string/setting_nav"
            android:icon="@drawable/settings_40px"/>
        <item android:id="@+id/nav_history"
            android:title="@string/logout_nav"
            android:icon="@drawable/logout_40px"/>
    </group>

    <item android:title="@string/account_nav">
        <menu>

            <item android:id="@+id/nav_my_profile"
                android:title="@string/my_profile_nav"
                android:icon="@drawable/ic_person"/>
            <item android:id="@+id/nav_change_password"
                android:title="@string/change_password_nav"
                android:icon="@drawable/ic_lock"/>
        </menu>
    </item>
</menu>